# exercism

./: .gitignore  readme.md
bash/hello-world/: hello_world.sh
bash/hello-world/.exercism/: metadata.json
csharp/: .gitignore
csharp/Simple-Calculator/: Simple-Calculator.sln
csharp/Simple-Calculator/CalculatorEngine.Test/: ConvertInputTest.cs  SimpleCalcEngineTest.cs  SimpleCalculatorEnginte.Test.csproj
csharp/Simple-Calculator/simple/SimpleCalc/: CalculateNumber.cs  ConvertInput.cs  Program.cs
csharp/acronym/: Acronym.cs
csharp/acronym/.exercism/: metadata.json
csharp/hamming/: Hamming.cs  HammingTest.cs
csharp/hamming/.exercism/: metadata.json
csharp/hello-world/.exercism/: metadata.json
csharp/isogram/: Isogram.cs
csharp/isogram/.exercism/: metadata.json
csharp/pangram/: Pangram.cs
csharp/pangram/.exercism/: metadata.json
csharp/reverse-string/: ReverseString.cs
csharp/reverse-string/.exercism/: metadata.json
csharp/two-fer/: TwoFer.cs
csharp/two-fer/.exercism/: metadata.json
rust/gigasecond/: Cargo.toml
rust/gigasecond/.exercism/: metadata.json
rust/gigasecond/src/: lib.rs
rust/hello-world/.exercism/: metadata.json
rust/pythagorean-triplet/.exercism/: metadata.json
rust/pythagorean-triplet/src/: lib.rs
rust/rust-api/: Cargo.toml  readme.md
rust/rust-api/migrations/2018-10-15-074616_students/: up.sql
rust/rust-api/src/: db.rs  main.rs  schema.rs  student.rs
rust/simple-auth/: Cargo.toml
rust/simple-auth/src/: app.rs  models.rs
rust/snake_game/: Cargo.toml
