[package]
name = "rust-api"
version = "0.1.0"
authors = ["NCanggoro <figuranajah@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }